Clean-up and preparation of alpha build. Linking with CK HK collection.

--- a/CardinalKit-Example/CardinalKit-Example.entitlements
+++ b/CardinalKit-Example/CardinalKit-Example.entitlements
@@ -4,16 +4,10 @@
 <dict>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinks:https://cs342.page.link</string>
-		<string>applinks:https://cs342.page.link/zLL2</string>
+		<string>applinks:cs342.page.link/zLL2</string>
 		<string>applinks:cs342.page.link</string>
-		<string>https://cs342.page.link</string>
-		<string>cs342.page.link</string>
-		<string>applinks:https://mhealthcs342.page.link/u9DC</string>
-		<string>applinks:https://mhealthcs342.page.link</string>
+		<string>applinks:mhealthcs342.page.link/u9DC</string>
 		<string>applinks:mhealthcs342.page.link</string>
-		<string>https://mhealthcs342.page.link</string>
-		<string>mhealthcs342.page.link</string>
 	</array>
 	<key>com.apple.developer.default-data-protection</key>
 	<string>NSFileProtectionComplete</string>
