--- a/CardinalKit-Example/CardinalKit/Supporting Files/Info.plist
+++ b/CardinalKit-Example/CardinalKit/Supporting Files/Info.plist
@@ -33,8 +33,8 @@
 	<string>2</string>
 	<key>FirebaseDynamicLinksCustomDomains</key>
 	<array>
-		<string>https://cs342.page.link/Rdse</string>
 		<string>https://cs342.page.link</string>
+		<string>https://cs342.page.link/Rdse</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
@@ -52,6 +52,23 @@
 	<string>Used In ResearchKit Active Tasks.</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
 	<string>Used In ResearchKit Active Tasks.</string>
+	<key>UIApplicationSceneManifest</key>
+	<dict>
+		<key>UIApplicationSupportsMultipleScenes</key>
+		<false/>
+		<key>UISceneConfigurations</key>
+		<dict>
+			<key>UIWindowSceneSessionRoleApplication</key>
+			<array>
+				<dict>
+					<key>UISceneConfigurationName</key>
+					<string>Default Configuration</string>
+					<key>UISceneDelegateClassName</key>
+					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
+				</dict>
+			</array>
+		</dict>
+	</dict>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
