--- a/CardinalKit-Example/CardinalKit/Supporting Files/Info.plist
+++ b/CardinalKit-Example/CardinalKit/Supporting Files/Info.plist
@@ -21,11 +21,13 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
 			<key>CFBundleURLName</key>
 			<string>edu.stanford.cs342.firebase</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>edu.stanford.cs342.sample-study</string>
+				<string>edu.stanford.cardinalkit</string>
 			</array>
 		</dict>
 	</array>
