added email/password auth 🔐

--- a/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration-example.plist
+++ b/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration-example.plist
@@ -59,6 +59,9 @@
 	<key>HealthKit Data to Read</key>
 	<array>
 		<string>HeartRate</string>
+		<string>DietaryEnergyConsumed</string>
+		<string>BloodPressureDiastolic</string>
+		<string>BloodPressureSystolic</string>
 	</array>
 	<key>Consent Form</key>
 	<dict>
