--- a/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration.plist
+++ b/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration.plist
@@ -22,6 +22,8 @@
 	<string>Review Consent Form</string>
 	<key>Reason for Consent Text</key>
 	<string>Consent to join the Developer Health Research Study.</string>
+	<key>Consent File Name</key>
+	<string>My Consent Form</string>
 	<key>Passcode Text</key>
 	<string>Now you will create a passcode to identify yourself to the app and protect access to information you&apos;ve entered.</string>
 	<key>Passcode Type</key>
