Password reset added via Firebase 🔒

--- a/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration-example.plist
+++ b/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration-example.plist
@@ -23,7 +23,7 @@
 	<key>Reason for Consent Text</key>
 	<string>Consent to join the Developer Health Research Study.</string>
 	<key>Consent File Name</key>
-	<string>My Consent Form</string>
+	<string>Coffee Consent Form</string>
 	<key>Passcode Text</key>
 	<string>Now you will create a passcode to identify yourself to the app and protect access to information you&apos;ve entered.</string>
 	<key>Passcode Type</key>
