--- a/CardinalKit-Example/CardinalKit/Supporting Files/Info.plist
+++ b/CardinalKit-Example/CardinalKit/Supporting Files/Info.plist
@@ -21,11 +21,13 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>edu.stanford.cs342.firebase</string>
+			<string>com.Kunal.CardinalKit.firebase</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>edu.stanford.cs342.sample-study</string>
+				<string>com.Kunal.CardinalKit</string>
 			</array>
 		</dict>
 	</array>
@@ -33,8 +35,7 @@
 	<string>2</string>
 	<key>FirebaseDynamicLinksCustomDomains</key>
 	<array>
-		<string>https://cs342.page.link/Rdse</string>
-		<string>https://cs342.page.link</string>
+		<string>https://kunalcardinalkit.page.link</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
