--- a/CardinalKit-Example/CardinalKit/Supporting Files/Info.plist
+++ b/CardinalKit-Example/CardinalKit/Supporting Files/Info.plist
@@ -24,10 +24,10 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>edu.stanford.cs342.firebase</string>
+			<string>edu.uw.appdev.trialx.firebase</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>edu.stanford.cardinalkit</string>
+				<string>edu.uw.appdev.trialx</string>
 			</array>
 		</dict>
 	</array>
@@ -35,8 +35,7 @@
 	<string>2</string>
 	<key>FirebaseDynamicLinksCustomDomains</key>
 	<array>
-		<string>https://cs342.page.link</string>
-		<string>https://cs342.page.link/Rdse</string>
+		<string>https://trialx.page.link</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
