--- a/CardinalKit-Example/TrialX.entitlements
+++ b/CardinalKit-Example/TrialX.entitlements
@@ -8,7 +8,7 @@
 	</array>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinks:cs342.page.link</string>
+		<string>applinks:trialx.page.link</string>
 	</array>
 	<key>com.apple.developer.default-data-protection</key>
 	<string>NSFileProtectionComplete</string>
