Skipped onboarding and got rid of some problematic storyboards

--- a/CardinalKit-Example/CardinalKit.xcodeproj/xcshareddata/xcschemes/CardinalKit-Example.xcscheme
+++ b/CardinalKit-Example/CardinalKit.xcodeproj/xcshareddata/xcschemes/CardinalKit-Example.xcscheme
@@ -74,6 +74,12 @@
             ReferencedContainer = "container:CardinalKit.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-didCompleteOnboarding 1"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
