Update health data to read items

--- a/CardinalKit-Example/CardinalKit/Supporting Files/Info.plist
+++ b/CardinalKit-Example/CardinalKit/Supporting Files/Info.plist
@@ -47,6 +47,8 @@
 	<string>Used for data security purposes.</string>
 	<key>NSHealthUpdateUsageDescription</key>
 	<string>Used for data security purposes.</string>
+	<key>NSHealthClinicalHealthRecordsShareUsageDescription</key>
+	<string>Your health records will be used to make medical suggestions.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Used In ResearchKit Active Tasks.</string>
 	<key>NSMotionUsageDescription</key>
