--- a/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration.plist
+++ b/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration.plist
@@ -60,10 +60,8 @@
 	<string>Research Health Study Consent Form</string>
 	<key>HealthKit Data to Read</key>
 	<array>
-		<string>StepCount</string>
-		<string>DistanceWalkingRunning</string>
-		<string>FlightsClimbed</string>
-		<string>HeartRate</string>
+		<string>ConditionsType</string>
+		<string>MedicationsType</string>
 	</array>
 	<key>Consent Form</key>
 	<dict>
