--- a/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration.plist
+++ b/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration.plist
@@ -59,12 +59,7 @@
 	<key>Consent Title</key>
 	<string>Research Health Study Consent Form</string>
 	<key>HealthKit Data to Read</key>
-	<array>
-		<string>StepCount</string>
-		<string>DistanceWalkingRunning</string>
-		<string>FlightsClimbed</string>
-		<string>HeartRate</string>
-	</array>
+	<array/>
 	<key>Consent Form</key>
 	<dict>
 		<key>Overview</key>
