--- a/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration.plist
+++ b/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration.plist
@@ -17,7 +17,7 @@
 	<key>Tint Color</key>
 	<string>#b6133f</string>
 	<key>Primary Color</key>
-	<string>#ff3961</string>
+	<string>#41803d</string>
 	<key>Review Consent Step Text</key>
 	<string>Review Consent Form</string>
 	<key>Reason for Consent Text</key>
