File Structure Organization

--- a/CardinalKit-Example/CardinalKit.xcodeproj/xcshareddata/xcschemes/CardinalKit-Example.xcscheme
+++ b/CardinalKit-Example/CardinalKit.xcodeproj/xcshareddata/xcschemes/CardinalKit-Example.xcscheme
@@ -77,7 +77,7 @@
       <CommandLineArguments>
          <CommandLineArgument
             argument = "-didCompleteOnboarding 1"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
