--- a/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration.plist
+++ b/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration.plist
@@ -59,7 +59,9 @@
 	<key>Consent Title</key>
 	<string>Research Health Study Consent Form</string>
 	<key>HealthKit Data to Read</key>
-	<array/>
+	<array>
+		<string>StepCount</string>
+	</array>
 	<key>Consent Form</key>
 	<dict>
 		<key>Overview</key>
