--- a/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration.plist
+++ b/CardinalKit-Example/CardinalKit/Supporting Files/CKConfiguration.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Visualizations</key>
+	<dict>
+		<key>showThumbnail</key>
+		<string>true</string>
+	</dict>
 	<key>Study Title</key>
 	<string>CardinalKit Sample App</string>
 	<key>Team Name</key>
