--- a/CardinalKit-Example/CardinalKit/Supporting Files/Info.plist
+++ b/CardinalKit-Example/CardinalKit/Supporting Files/Info.plist
@@ -43,12 +43,12 @@
 	<string>Used In ResearchKit Active Tasks.</string>
 	<key>NSFaceIDUsageDescription</key>
 	<string>Used for data security purposes.</string>
+	<key>NSHealthClinicalHealthRecordsShareUsageDescription</key>
+	<string>Your health records will be used to make medical suggestions.</string>
 	<key>NSHealthShareUsageDescription</key>
 	<string>Used for data security purposes.</string>
 	<key>NSHealthUpdateUsageDescription</key>
 	<string>Used for data security purposes.</string>
-	<key>NSHealthClinicalHealthRecordsShareUsageDescription</key>
-	<string>Your health records will be used to make medical suggestions.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Used In ResearchKit Active Tasks.</string>
 	<key>NSMotionUsageDescription</key>
@@ -83,6 +83,9 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
